set label text color to white while incognito

set label text color to white in the setStyle func in
overscroll_actions_view.mm.

In incognito mode, the text color of the label in overscroll view is
gray, which appears to be too dim and hard to see. We will set it to
white color.

Bug: 846321
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: If75cb5ab361fe21e580adebe75716abc0d2a1f54
Reviewed-on: https://chromium-review.googlesource.com/1071514
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562253}
Former-commit-id: 23fe24b803232670b8e36bd94668c4891b3bef24